--- a/cs.tex
+++ b/cs.tex
@@ -54,29 +54,55 @@
 
 
 \section{Introduction}
-The goal of this work is to design a decentralized control strategy for the Cucker-Smale system to steer the system to consensus while preserving the spatial connectivity of the initial interaction graph.
+The aim of this work is to design a decentralized optimal control strategy for the Cucker-Smale system to steer the system to consensus while maintaining the spatial connectivity of the initial interaction graph.
 
 Consider the Cucker-Smale system
 \begin{align}
 \begin{cases}
 \D
 \dot{x_i} = v_i,\\
-\dot{v_i} = \frac{1}{N}\sum_{i=1}^{N}a_{ij}(v_j - v_i) + u_i, \\
+\dot{v_i} = \frac{1}{N}\sum_{j\in \mathcal{I}}a(\|x_i - x_j\|)(v_j - v_i) + u_i, \\
 x(0) = x_0,
 v(0) = v_0.
 \end{cases}
 \label{csm}
 \end{align}
-where $i=1,\dots N$, $N$ is a number of $d$-dimensional agents, a pair $(x_i, v_i)\in \mathbb{R}^{2d}$, represents the position and velocity of every agent, $u_i$ is an external controller,  $a_{ij} = a(\|x_i - x_j\|)$,  $a:[0, \infty)\longrightarrow [0, \infty)$ is an interaction function to be suitably defined later.
-
-We would like to design a decentralized optimal control strategy to steer the system (\ref{csm}) to consensus by minimizing the agents' velocity deviation throughout the system evolution.
+where $i\in \mathcal{I} \subset \mathbb{N}$ \--- some set of indexes, $N = \# \mathcal{I}$ is the number of  $d$-dimensional agents, a pair $(x_i, v_i)\in \mathbb{R}^{2d}$, represents the position and velocity of every agent, $u_i$ is an external controller. This kind of model has been introduced by Cucker and Smale in [cucker-smale] for specific choices of the interaction function $a$ as
 \begin{equation}
-J(x, v) = \int_{0}^{T}B(v, v):= \frac{1}{2N^2}\int_{0}^{T}\sum_{i, j = 1}^{N}\|v_i - v_j\|^2.
-\label{Vt}
+a(r) = \frac{1}{(1 + r^2)^\delta} \qquad \mbox{for every}\quad \delta \in [0, +\infty],
+\label{a}
 \end{equation}
+this function defines the natural interaction force between agents. The unconditional consensus emergence largely depends on the strength of the force. In [cucker-smale] a result was presented related to the parameter $\delta$ in (\ref{a}); it asserts that for $\delta \leq 1/2$, the system tends asymptotically to consensus, independent of its initial configuration. For $\delta \geq 1/2$, consensus emergence will depend on the cohesion of the initial setting. A precise characterization of this situation was obtained in [9 from BFK] where a sufficient condition depending on the initial configuration and the parameter $\delta$ is provided. To state this condition let us define a symmetric bilinear form $B$ on $R^{N\times d} \times  R^{N\times d}$ by
+\begin{equation}
+B(u, v) = \frac{1}{2N^2}\sum_{i, j \in \mathcal{I}} \langle u_i - u_j, v_i - v_j  \rangle,
+\label{b}
+\end{equation}
+where $\langle . \rangle$ denotes a scalar product in $R^d$.
+\begin{theo}
+Let $(x_0, v_0) \in R^{N\times d} \times  R^{N\times d}$ be such that $X_0 = B(x_0, x_0)$ and $V_0 = B(v_0, v_0)$ satisfy
+$$
+E(x_0, v_0):=\sqrt{V_0} - \int_{\sqrt{X_0}}^{\infty} a(\sqrt{2N}r)dr \leq 0.
+$$
+Then the solution of uncontrolled system (\ref{csm}) with initial data $(x_0, v_0)$  tends to consensus.
+\end{theo}
+
+There have been developed many analytical feedback control strategies  to steer the system (\ref{csm}) to consensus. In particular in [CFTP] it is shown that with a controller 
+of the form
+$$
+u_i = \bar{v} - v_i,
+$$
+consensus emergence can be guaranteed for any configuration and values of $\delta$. A natural drawback of such a controller relates to the fact that is is always active, and it involves the whole system at every
+instant of time. Later on,  in [BFK] a decentralized control setting  was studied \--- a local feedback depending on a metrical neighbourhood of the agents. The neighbours consist of all agents 
+the distance to which is less than a specified number $R>0$
+$$
+u_i = \bar{v}_i - v_i,
+$$
+where $\bar{v}_i$ is an approximated mean velocity vector in the neighbourhood of radius $R$ instead of the true mean velocity of the whole group $\bar{v}$. This control guarantees the consensus emergence under certain initial conditions.
 
 
-To introduce decentralization let us define the dynamic graph for the interaction between agents.
+
+
+Let us define a distance dependent dynamic graph for the interactions between agents.
 \begin{dfn}
 We call $\mathcal{G}(t) =  (\mathcal{V}, \mathcal{E}(t) )$ a dynamic graph consisting of a set of vertices $\mathcal{V} = \{1, \dots,  N\}$ indexed by the set of agents and a time varying set of links 
 $\mathcal{E}(t) = \{(i, j)|i, j \in \mathcal{V}\}$ such that, for any $R>0$
@@ -85,32 +111,50 @@ $$
 $$
 \end{dfn}
 And let us denote $\mathcal{N}_i(t) = \{j|(i, j)\in\mathcal{E}(t)\}$ the neighbourhood of agent i.
-Let us also denote an agent along with its neighbours as a set $\bar{\mathcal{N}}_i(t)$.
-
-
-
-The decentralization strategy consists in decomposition the state domain in sub-domains for each agent $i$ and his neighbours $\mathcal{N}_i(t)$ where  an optimal control is solved independently to obtain the suitable decentralized control for this agent. Such decentralization have already been utilized for first order systems in [jadbabai].
-
- The algorithm adopts an model predictive control approach by partitioning the time interval $[0, T]$ into $n$ time windows of length $\Delta T$: $0 = T_0, T_1, T_2, \dots, T_m = T$ and for each time window  $[T_{l-1}, T_{l}]$, $l = 1, \dots, m$ for each agent $p$, $p = 1, \dots, N$  solving the following optimal control problem
+Let us also denote an agent along with its neighbours as a set $\bar{\mathcal{N}}_i(t) = \mathcal{N}_i(t)\bigcup \{i\}$.
+In [jadbabaieflocking while preserving connectivity] a distributed control law, based on potential fields, that achieve velocity alignment and maintain the existing links in the network was developed 
 \begin{equation}
- \min_{x, v} J_p(x, v) = \int_{0}^{T}B(v, v) + \int_{0}^{T}\sum_{j\in \mathcal{N}_p(t)} V(\|x_p - x_j\|),
-\label{opci}
+u_i = \bar{v}_i - v_i - \sum_{j \in \mathcal{N}_i(t)}\nabla_{x_i}V(\|x_i - x_j\|).
+\label{controljad}
 \end{equation}
-subject to (\ref{csm}) where $i \in \bar{\mathcal{N}}_p(T_l)$,  $N = N_p:= \sharp \bar{\mathcal{N}}_p(T_l)$, with initial conditions taken as endpoints form the solution on the previous time window $l-1$,  and $V(r)$ is an artificial potential function  as was used in [jadbabai] to maintain the connectivity of the initial interaction graph $\mathcal{G}(0)$ 
+where $\bar{v}_i = \sum_{j \in \mathcal{N}_i(t)} v_j$, and $V$ is an artificial potential function  as was used in [jadbabai] to maintain the connectivity of the initial interaction graph $\mathcal{G}(0)$ 
 \begin{equation}
- V(r) = \frac{1}{r^2} + \frac{1}{R^2 - r^2}, \qquad 0 < r < R,
+ V(r) = \frac{1}{r^2} + \frac{1}{R^2 - r^2}, \qquad 0 < r < R.
 \label{potential}
 \end{equation}
-this potential not only allows for maintaining links in the network but also for avoiding collisions among the agents. Note, that we are only interested in maintaining the initial connectivity of the graph which rules of the risk for the potential to grow unbound.
+This potential not only allows for maintaining links in the network but also for avoiding collisions among the agents.
 
- Therefore, at each time window $l$ we obtain for each agent $p$ a suitable decentralized control $u_p(\mathcal{N}_p(T_l))$ which only depends on its neighbours in the time window $l$.
+
+We would like to design a decentralized control strategy with the same aims as (\ref{controljad}) but such that it is optimal in some sense. 
+For this we consider minimizing the following objective functional 
+\begin{equation}
+J(x, v) = \int_{0}^{T}B(v(t), v(t)) + B(v(T), v(T)) + \int_{0}^{T}\sum_{p\in \mathcal{I}}\sum_{j\in \mathcal{N}_p(t)} V(\|x_p(t) - x_j(t)\|),
+\label{Vt}
+\end{equation}
+where $B(v, v)$ as defined in (\ref{b})  stands for the velocity deviations throughout the systems' evolution, the term 
+$B(v(T), v(t))$ accentuates the importance of consensus emergence at the terminal observation, and $V$ is as in (\ref{potential}).
+Note, that we are only interested in maintaining the initial connectivity of the graph which rules of the risk for the potential to grow unbound.
+
+
+
+
+
+The decentralization strategy consists in decomposing the state domain in sub-domains $\bar{\mathcal{N}}_p(t)$ for every $p\in \mathcal{I}$ where an optimal control problem is solved independently to obtain the suitable decentralized control for agent $p$. Such decentralization has already been utilized for first order systems in [jadbabai decentralized control of connectivity].
+
+ The algorithm adopts the model predictive control approach by partitioning the time interval $[0, T]$ into $m$ time windows of width $\Delta T$: $0 = T_0, T_1, T_2, \dots, T_m = T$ and for each time window  $[T_{l-1}, T_{l}]$, $l = 1, \dots, m$ for each agent $p$, $p = 1, \dots, N$  solving the following optimal control problem
+\begin{equation}
+ \min_{x, v} J_p(x, v) = \int_{T_{l-1}}^{T_l}B(v(t), v(t)) + B(v(T_l), v(T_l)) + \int_{T_{l-1}}^{T_l}\sum_{j\in \mathcal{N}_p(t)} V(\|x_p(t) - x_j(t)\|),
+\label{opci}
+\end{equation}
+subject to (\ref{csm}) where $\mathcal{I} = \bar{\mathcal{N}}_p(T_l)$,  $N = N_p:= \# \bar{\mathcal{N}}_p(T_l)$, with initial conditions taken as endpoints form the solution on the previous time window $l-1$.
+Therefore, at each time window $l$ we obtain for each agent $p$ a suitable decentralized control $u_p(\mathcal{N}_p(T_l))$ which only depends on its neighbours in the time window $l$.
  
  
  \section{The optimal contro problem and its discretization}
+
  
- We represent the optimal control problem (\ref{opci}) for the agent $p$ on a time window $T_l$ in Mayer form.
- 
- 
+ We represent the optimal control problem (\ref{opci}) for the agent $p$ on a time window $[T_{l-1}, T_{l}]$ in Mayer form.
+  
  \begin{align}
  \D
  \mbox{minimize}\quad  C(X(T)),\\
@@ -118,38 +162,45 @@ this potential not only allows for maintaining links in the network but also for
   X(0) = X_0,
  \label{opcm}
  \end{align}
- where $X\in W^{1, \infty}$, $u\in L^{\infty}$, the control $u \in R^{N_p\times d}$,
- the state $X\in \mathbb{R}^{N_p \times d\times N_p\times d \times 1}$ is a compact form composed of the position and velocity 
+where  the control $u \in  L^{\infty}([T_{l-1}, T_{l}], \mathbb{R}^{N_p \times d})$,
+the state $X\in H^1([T_{l-1}, T_{l}], \mathbb{R}^{N_p \times d} \times \mathbb{R}^{N_p\times d} \times \mathbb{R})$
+in a compact form composed of the position and velocity 
 states of (\ref{csm})   $X(t) = (x(t), v(t), z(t))$, $x(t) = (x_{i_1}(t), \dots, x_{i_{N_p}}(t))$,
  $v(t) = (v_{i_1}(t), \dots, v_{i_{N_p}}(t))$, $\{i_1, \dots, i_{N_p}\} \in \bar{\mathcal{N}}_p(T_l)$, 
  and $z(t)$ is an auxiliary component 
  $$
- z(t) = B(v, v) + \sum_{j\in \mathcal{N}_p(t)} V(\|x_p - x_j\|),
+ z(t) = B(v(t), v(t)) + \sum_{j\in \mathcal{N}_p(t)} V(\|x_p(t) - x_j(t)\|),
  $$
  and $F(X)$ is the dynamics of the system (\ref{csm}) in compact form
  $$
- F(X(t), u) =
+ F(X(t), u(t)) =
   \left( 
   \begin{array}{c}
-  v\\
-   - L_xv + u\\
-   z\\
+  v(t)\\
+   - L_xv(t) + u(t)\\
+   z(t)\\
  \end{array} 
  \right), 
  $$
  where $L_x$ is the Laplacian of the $N_p\times N_p$ matrix $(a(\|x_i - x_j\|)/N_p)_{i, j\in\bar{\mathcal{N}}_p(T_l)}$ and depends on $x$.
+ For the functional $C$ to correspond to the problem in its original form it is chosen 
+ $$
+ C(X(T_l)) = z(T_l) + B(v(T_l), v(T_l)).
+ $$
  
- 
- Note, since our problem is autonomous and all time windows are of the same width without loss of generality
+  Note, since our problem is autonomous and all time windows are of the same width without loss of generality
  we can transform the problem on time interval $[0, \Delta T]$. 
- To discretize the problem we utilize a Runge-Kutta scheme developed in [hager] on a uniform time mesh and the following time-step size
+ 
+ 
+  
+  Given the problem (\ref{opcm}) we discretize it and obtain a discrete gradient with a Runge-Kutta scheme developed in [hager] on a uniform time mesh and the following time-step size
  \begin{equation}
    h = \frac{\Delta T}{n},
    \label{h}
  \end{equation}
  where $n$ is the total number of discrete time intervals in $[0, \Delta T]$.  The value of $X(t)$ at the discrete time $t_k$ is denoted with
  $$
- X_k = X(t_k), \qquad t_k = k \quad\mbox{for} \quad k = 1, \dots n.
+ X^k = X(t^k), \qquad t^k = k \quad\mbox{for} \quad k = 1, \dots n.
  $$
  We consider an $s$-stage Runge-Kutta discretization scheme defined by setting the coefficients $a_{ij}$ and
  $b_{i}$, $1\leq i, j\leq s$, such that they satisfy conditions given in [hager].
@@ -159,47 +210,131 @@ states of (\ref{csm})   $X(t) = (x(t), v(t), z(t))$, $x(t) = (x_{i_1}(t), \dots,
  \begin{align}
   \D
   \mbox{minimize}\quad C(X_n),\\
-   \mbox{subject to} \quad X_{k+1} = X_{k} + h\sum_{i=1}^{s}b_iF(y_i, u_{ki}), \qquad X_0 = X(0),\\
-	y_i = X_k + h\sum_{j=1}^{s}a_{ij}F(y_j, u_{kj}),
+   \mbox{subject to} \quad X^{k+1}  = X^k + h\sum_{i=1}^{s}b_iF(y^i, u^{ki}), \qquad X_0 = X(0),\\
+	y^i = X^k + h\sum_{j=1}^{s}a_{ij}F(y^j, u^{kj}),
   \label{opcmd}
   \end{align}
  
  for $1\leq i, j\leq s$, and $0\leq k\leq n-1$.
- Where the vectors $y_j$ and $u_{kj}$ are intermediate state and control variables on the interval $[t_k, t_{k+1}]$. In such representatation the state uniqueness is guaranteed see [hager]. 
-Following [hager] the optimality system corresponding to (\ref{opcmd}) is given by
+ Where the vectors $y^j$ and $u^{kj}$ are intermediate state and control variables on the interval $[t^k, t^{k+1}]$. In such representatation the state uniqueness is guaranteed see [hager]. 
+ 
+ 
+ 
+
+
+\subsection{The gradient evaluation}
+Provided the discrete OPC (\ref{opcmd})  the corresponding  optimality system  is given by
 
   \begin{align}
    \D
-   \mbox{minimize}\quad C(X_n),\\
-    \mbox{subject to} \quad X_{k+1} = X_{k} + h\sum_{i=1}^{s}b_iF(y_{ki}, u_{ki}), \qquad X_0 = X(0),\\
- 	y_i = X_k + h\sum_{j=1}^{s}a_{ij}F(y_{kj}, u_{kj}),\\
- 	p_k = p_{k+1} + \sum_{i=1}^{s}\psi_{ki}, \qquad p_n = - \nabla_xC(X_n),\\
- 	\psi_{ki} = (\Delta_x F(y_{ki}, u_{ki}))^{T} \left( p_{k+1} + \sum_{j=1}^{s} \frac{a_{ji}}{b_i}\psi_{kj}\right), 
+    \quad X^{k+1}  = X^k + h\sum_{i=1}^{s}b_iF(y^{ki}, u^{ki}), \qquad X_0 = X(0),\\
+ 	y^i = X^k + h\sum_{j=1}^{s}a_{ij}F(y^{kj}, u^{kj}),\\
+ 	p^k = p^{k+1} + \sum_{i=1}^{s}\psi^{ki}, \qquad p^n = - \nabla_xC(X^n),\\
+ 	\psi^{ki} = (\nabla_x F(y^{ki}, u^{ki}))^{T} \left( p^{k+1} + \sum_{j=1}^{s} \frac{a_{ji}}{b_i}\psi^{kj}\right), 
    \label{opsystem}
    \end{align}
 
-From this system the following gradient results
-$$
-\nabla_{u_{ki}} C(u_{ki}) = - (\Delta_u F(y_{ki}, u_{ki}))^{T} \left( p_{k+1} + \sum_{j=1}^{s}\frac{a_{ji}}{b_i}\psi_{kj}\right), 
-$$
-
+The first order system (\ref{opsystem}) provides a convenient way to compute the gradient of the discrete cost functional in (\ref{opcmd})
+\begin{equation}
+\nabla_{u^{ki}} C(u) = - (\nabla_u F(y^{ki}, u^{ki}))^{T} \left( p^{k+1} + \sum_{j=1}^{s}\frac{a_{ji}}{b_i}\psi^{kj}\right), 
+\label{discretegradient}
+ \end{equation}  
  for $1\leq i, j\leq s$, and $0\leq k\leq n-1$.
  The well-posedness of the optimal control problem (\ref{opsystem}) and error estimates in the discrete approximation are present in [hager].
  
- For the minimization procedure the nonlinear conjugate gradient  method developed in [hager zhang] is deployed.
- This scheme satisfies the decent condition $\|\nabla_{u_{ki}} C(u_{ki})\|d_k \leq -\frac{7}{8}\|\nabla_{u_{ki}} C(u_{ki})\|^2$, where $d_k$ is an NCG decent direction. Our choice is motivated by our numerical experiments. In fact, the Hager-Zhang NCG scheme results to be the most efficient among the known formulas.
+
+
+ \subsection{The NCG scheme}
+  For the minimization procedure the nonlinear conjugate gradient  method developed in [hager zhang] is deployed.
+  The reduced functional $C(u):=C(X(u), u)$ is minimized by a sequence
+  \begin{equation}
+  u^{(k+1)} =   u^{(k)} + \alpha^{(k)} d^{(k)},
+  \label{ncgscheme}
+   \end{equation}  
+  where $\alpha^{(k)}$ is a positive step size and the directions $d^{(k)}$ are generated by the rule
+  \begin{equation}
+  d^{(k+1)} = - \nabla_u C(u^{(k+1)}) + \beta^{(k)} d^{(k)}, \qquad d^{(0)} = -\nabla_u C(u^{(0)}),
+  \label{drct}
+  \end{equation}
+  \begin{equation}
+  \beta^{(k)} = \frac{1}{(d^{(k)})^T y^{(k)}} \left( y^{(k)} - 2d^{(k)}\frac{\|y^{(k)}\|^2}{(d^{(k)})^T y^{(k)}}\right)\nabla_u C(u^{(k+1)}).
+  \label{drct}
+  \end{equation}  
+  Here $y^{(k)} = \nabla_u C(u^{(k+1)}) - \nabla_u C(u^{(k)})$. 
+  We stop the procedure once the gradient has reached a certain threshold $\|\nabla_u C(u^{(k)})\| < \epsilon$, $\epsilon > 0$.
+   
+  This scheme satisfies the decent condition $\|\nabla_u C(u)\|d^{(k)} \leq -\frac{7}{8}\|\nabla_u C(u)\|^2$. Our choice is motivated by our numerical experiments. In fact, the Hager-Zhang NCG scheme results to be the most efficient among the known formulas. 
+  
+  
  
- \section{The dicentralized MPC strategy}
- 
- The algorithm reads the following: given the system (\ref{csm}):
+ \subsection{The decentralized MPC strategy}
+  The algorithm reads the following: given the system (\ref{csm}):
   
  \begin{enumerate}
    \item Partition time interval $[0, T]$ into time windows $\Delta T$: $0 = T_0, T_1, \dots, T_m = T$.
-   \item For each time window  $[T_{l-1}, T_{l}]$, $l = 1, \dots, m$ and for each agent $p$, $p = 1, \dots, N$  solve the problem (\ref{opcm}) with the initial conditions $(x^l_p(nh), v^l_p(nh))$, for $l = 0$ take $(x_{0p}, v_{0p})$.
-   \item From the solution of (\ref{opcm}) retrieve the discrete state for the agent $p$ in the window $l$ $(x^l_p(kh), v^l_p(kh))$ and control $u^l_p(kh)$, $k = 1, \dots, n$, where $h$ as in (\ref{h}) 
+   \item For each time window  $[T_{l-1}, T_{l}]$, $l = 1, \dots, m$ and for each agent $p$, $p = 1, \dots, N$  solve the problem (\ref{opcmd}) using the NCG scheme (\ref{ncgscheme}) with the gradient as in (\ref{discretegradient}), for the initial conditions $(x^{l-1n}_p, v^{l-1 n}_p)$, if $l = 0$, take $(x_{0p}, v_{0p})$.
+   \item From the solution of (\ref{opcmd})  retrieve the discrete state for the agent $p$ in the window $l$ $(x^{lk}_p, v^{lk}_p)$ and control $u^{lk}_p$, $k = 1, \dots, n$.
    \item Repeat the steps 2-3 until the solutions for all windows are obtained.
  \end{enumerate}
  
+ 
+ 
+ \section{Numerical experiments}
+In this section some simulations are presented to testify the effectiveness of the proposed algorithm. We consider a multi-agent system (\ref{csm}) with the interaction function 
+$a$ as in (\ref{a}) for $\delta = 1$. The system is composed of $5$
+agents on the plane with initial positions and velocities respectively
+\[x_0 =  \left( \begin{array}{cc}
+		  -1  &   0\\
+           0  &   1\\
+           1  &   1\\
+           1  &   0\\
+           0 &   -1\\
+\end{array} \right),
+%
+v_0 = 
+\left( \begin{array}{cc}
+	     -1&  -1\\
+	     -1&   1\\
+	      0&   1\\
+	      1&   0\\
+	      0&  -1\\
+\end{array} \right).
+\]
+The time of system evolution is $T = 20$ with  $m = 40$ uniform time windows, where  on each window the discretization grid
+is taken with $n = 80$ nodes.  The connection radius is $R = 2.5$. 
+
+In the first simulation we test our decentralized optimal control approach. On Figure \ref{ev} the evolution of the system is plotted. The initial position
+is denoted with circles while the final velocities are depicted with red arrows. On Figure \ref{g} the initial as well as terminal configurations and the connectivity graphs of the system are present.
+
+
+
+\begin{figure}[ht]
+  \begin{minipage}[b]{0.6\textwidth}
+    \includegraphics[width=\textwidth]{figures/V5aT=20ndT=40ev.eps}
+    \caption{Evolution of the system}
+    \label{ev}
+  \end{minipage}
+  \hfill
+  \begin{minipage}[b]{0.6\textwidth}
+    \includegraphics[width=\textwidth]{figures/V5aT=20ndT=40g.eps}
+    \caption{The connectivity graphs}
+    \label{g}
+  \end{minipage}
+\end{figure}
+  
+ 
+ \begin{figure}[ht]
+ \centering
+ \includegraphics[scale=0.5]{figures/V5aT=20ndT=40lf.eps}
+ \caption{Lyapunov function}
+ \label{lf}
+ \end{figure}
+ 
+ \newpage
+ From Figure \ref{lf} we observe a steady decrease in velocity deviation $B(v, v)$ throughout the the evolution of the system with its terminal value $B(v^{mn}, v^{mn}) = 1.321e-05$.
+ The small bump in the graph on Figure \ref{lf} is due to the fact that our optimal control strategy makes  a trade-off between maintaining the connectivity of the system and consensus emergence. 
+ Nevertheless, it manages to bring the system to the region of consensus emergence since $E(x^{mn}, v^{mn}) = -0.0619$ becomes negative at the terminal configuration therefore, the system 
+ tends to consensus uncontrolled.
  
 
 
